--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<title>Mi Pagina Web</title>
+<title>Mi Pagina Web prueba GitHub</title>
 <body>
     <h1>Esto es una prueba</h1>
     
