--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<title>Mi Pagina Web prueba GitHub</title>
+<title>Mi Pagina Web</title>
 <body>
-    <h1>Esto es una prueba</h1>
+    <h1>Esto es una prueba GitHub</h1>
     
 <script src="app.js"></script>    
 </body>
